# soundboard

./: README.md  index.html  package-lock.json  package.json  vite.config.js
native-audio/: README.md
native-audio/bridge/include/: soundboard_ipc.h
native-audio/bridge/src/: soundboard_ipc.c
native-audio/engine/src/: audio_engine.cpp  audio_engine.h  audio_ring_buffer.h  default_endpoint.cpp  default_endpoint.h  main.cpp
native-audio/protocol/: soundboard_protocol.h
native-audio/selftest/: selftest.cpp
scripts/: build.bat  diagnose.sh  install-tools.bat  tauri.mjs
src/: main.js  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri — kopia/: tauri.conf.json
src-tauri — kopia/capabilities/: default.json
src-tauri — kopia/src/: lib.rs
src-tauri/examples/: default_input.rs  native_probe.rs
src-tauri/resources/vbcable/: NOTICE.md  SHA256SUMS.txt
src-tauri/src/: lib.rs  main.rs  native_audio.rs  virtual_audio.rs
