[package]
name = "soundboard_binder"
version = "0.1.0"
description = "Desktop soundboard with routed playback and URL import"
authors = ["Contributors"]
edition = "2021"

[lib]
name = "soundboard_binder_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
cpal = "0.17"
dirs = "6"
rodio = { version = "0.22", features = ["playback", "mp3", "wav", "flac", "vorbis", "symphonia-aac", "symphonia-isomp4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
