[package]
name = "soundboard_binder"
version = "0.1.0"
description = "Desktop soundboard with routed playback and URL import"
authors = ["Contributors"]
edition = "2021"

[lib]
name = "soundboard_binder_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
cpal = "0.17"
dirs = "6"
libloading = "0.8"
rodio = { version = "0.22", features = ["playback", "mp3", "wav", "flac", "vorbis", "symphonia-aac", "symphonia-isomp4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tempfile = "3"
zip = { version = "7.2", default-features = false, features = ["deflate-flate2-zlib-rs"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = [
  "Win32_Foundation",
  "Win32_Media_Audio",
  "Win32_System_Com",
  "Win32_System_Com_StructuredStorage",
  "Win32_System_Registry",
  "Win32_System_Threading",
  "Win32_System_Variant",
  "Win32_UI_Shell",
  "Win32_UI_Shell_PropertiesSystem"
] }
